--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+click==8.1.3
 dnspython==2.2.1
 english-words==1.1.0
+joblib==1.2.0
 mongoengine==0.24.2
+nltk==3.7
 pymongo==4.3.3
+regex==2022.10.31
 textdistance==4.5.0
+tqdm==4.64.1
